# vfs-appointment-booker

./: Makefile  booker.py  example.headers  example.post  package-lock.json  pyproject.toml  response.html
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/api/stripeAPI/: api-params.json
amplify/backend/function/stripeCheckout/: stripeCheckout-cloudformation-template.json
amplify/backend/function/stripeCheckout/src/: app.js  package.json
amplify/backend/function/stripeHook/: stripeHook-cloudformation-template.json
amplify/backend/function/stripeHook/src/: app.js  package-lock.json  package.json
amplify/backend/function/stripeHook/src/amplify/#current-cloud-backend/: amplify-meta.json
amplify/backend/function/stripeHook/src/amplify/#current-cloud-backend/api/stripeAPI/: api-params.json
amplify/backend/function/stripeHook/src/amplify/#current-cloud-backend/function/stripeCheckout/src/: package.json
amplify/backend/function/stripeHook/src/amplify/backend/function/stripeCheckout/: stripeCheckout-cloudformation-template.json
amplify/backend/function/stripeHook/src/amplify/backend/function/stripeCheckout/src/: package-lock.json
website/: .gitignore  index.html
website/amplify/: team-provider-info.json
website/amplify/.config/: project-config.json
website/amplify/backend/api/stripeAPI/: stripeAPI-cloudformation-template.json
website/amplify/backend/function/stripeCheckout/src/: package-lock.json
website/js/: init.js  stripe-local.js
