[tool.poetry]
name = "vfs appointment booker"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
requests = "2.25.1"
lxml = "4.6.3"
pytesseract = "0.3.7"
captcha-solver = "0.1.5"
numpy = "1.20.2"
scipy = "1.6.2"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
